<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/works_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_it_works"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/work_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:layout_below="@id/works_text"
        android:text="@string/works"/>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/work_info_text"
        android:background="@color/colorPrimary"/>
    <TextView
        android:id="@+id/note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/view_line"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/note"/>
    <TextView
        android:id="@+id/note_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_text"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/important"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/note_info"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"/>
    <TextView
        android:id="@+id/warning_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_info"
        android:layout_marginTop="20dp"
        android:text="@string/warningText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ff0000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warning_text"
        android:layout_marginTop="5dp"
        android:text="@string/warning"
        android:textSize="15sp"
        android:textColor="#ff0000"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/developed_by_arcnet_hub_infotech_india_pvt_ltd"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"/>

</RelativeLayout>
