<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/registration_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f48fb1"

    tools:showIn="@layout/activity_registration"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/enter_name"
            android:padding="10dp"
            android:inputType="text"
            android:lines="1"/>

        <EditText
            android:id="@+id/input_father_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/enter_father_s_name"
            android:padding="10dp"
            android:maxLines="1"
            android:inputType="text"/>


        <EditText
            android:id="@+id/input_mobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/enter_mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />

        <EditText
            android:id="@+id/input_adhar_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:inputType="number"
            android:maxLength="14"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/enter_aadhar_number"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:maxLines="1"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/save_profile"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAllCaps="false"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/profile_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:visibility="gone"/>

    <include layout="@layout/otp_layout" />

    <Button
        android:id="@+id/btn_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:text="@string/already_registered_login_me"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"/>

</RelativeLayout>