<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f48fb1"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_raksha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"/>


    <EditText
        android:id="@+id/input_mobile_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:background="@drawable/edit_text_shape"
        android:layout_centerVertical="true"
        android:hint="@string/enter_mobile_number"
        android:padding="10dp"
        android:inputType="number"
        android:maxLength="10"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_mobile_login"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:background="@drawable/button_shape"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"/>

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>



</RelativeLayout>