<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/otp_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    android:background="#f48fb1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="serif"
        android:text="@string/please_wait_for_otp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/input_otp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/enter_otp"
        android:textAlignment="center"
        android:inputType="number"
        android:maxLength="6"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_verify_otp"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/button_shape"
        android:text="@string/verify_otp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/otp_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="gone" />


</LinearLayout>